# slackfeeder

./: .env.example  .gitignore  .pylintrc  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BROWSER_CAPTURE_IMPROVEMENTS.md  BROWSER_EXPORT.md  BROWSER_EXPORT_TEST_RESULTS.md  CODE_REVIEW.md  DOCUMENTATION_UPDATES.md  DOM_EXTRACTION_GUIDE.md  Makefile  ReadMe.md  TEST_COVERAGE_SUMMARY.md  export_slack_history.py  make_ref_files.py  preprocess_slack.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
config/: channels.json  channels.json.example  config.json.example  conversations.json  people.json  people.json.example
scripts/: browser_export_dm.py  capture_slack_dm_improved.py  capture_slack_dm_mcp.py  check_date_coverage.py  check_missing_dates.py  combine_batches.py  combine_messages.py  extract_active_threads.py  extract_dom_messages.py  extract_historical_threads.py  rename_drive_files.py  select_conversation_from_sidebar.py  test_browser_export_automated.py  update_requirements.sh  verify_and_extract_missing.py
src/: __init__.py  browser_response_processor.py  browser_scraper.py  cli.py  drive_upload.py  export_api.py  export_browser.py  google_drive.py  main.py  message_processing.py  slack_client.py  utils.py
tests/: README.md  conftest.py  test_browser_scraper.py  test_critical_bugs.py  test_critical_bugs_fixed.py  test_extract_active_threads.py  test_extract_dom_messages.py  test_extract_historical_threads.py  test_google_drive.py  test_google_drive_fixes.py  test_main.py  test_main_api_threads.py  test_main_fixes.py  test_main_historical_extraction_integration.py  test_slack_client.py  test_slack_client_threads.py  test_utils.py
