[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slackfeeder"
version = "1.0.0"
description = "Export Slack conversations and upload to Google Drive"
readme = "ReadMe.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "jflowers"}
]
keywords = ["slack", "google-drive", "export", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "cachetools>=6.2.1",
    "google-api-python-client>=2.186.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "slack-sdk>=3.37.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "pytest>=8.3.4",
]

[project.scripts]
slackfeeder = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.pylint.main]
# Use multiple processes to speed up Pylint
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
# Disable specific warnings
disable = [
    "C0111",  # missing-docstring (too verbose for this project)
    "C0103",  # invalid-name (allow short variable names)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0912",  # too-many-branches
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "E1101",  # no-member (Google API client uses dynamic attributes)
]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-statements = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
